--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#4d97f4",
-    "activityBar.activeBorder": "#b40b56",
-    "activityBar.background": "#4d97f4",
+    "activityBar.activeBackground": "#abe3f1",
+    "activityBar.activeBorder": "#e45bc8",
+    "activityBar.background": "#abe3f1",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#b40b56",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#1d7bf1",
-    "statusBar.border": "#1d7bf1",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#4d97f4",
-    "titleBar.activeBackground": "#1d7bf1",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#1d7bf1",
-    "titleBar.inactiveBackground": "#1d7bf199",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "activityBarBadge.background": "#e45bc8",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#7fd5ea",
+    "statusBar.border": "#7fd5ea",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#53c7e3",
+    "titleBar.activeBackground": "#7fd5ea",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.border": "#7fd5ea",
+    "titleBar.inactiveBackground": "#7fd5ea99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.remoteColor": "#1d7bf1"
+  "peacock.remoteColor": "#7fd5ea"
 }
